examples/nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: nginx-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: myapp
