examples/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: nginx-ns
spec:
  ingressClassName: external-nginx
  rules:
    - host: "replace-with-your-host.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
